sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value get
		for (i <- 0 to get NombreValeurs()-1) {
                               ^